--- a/assets/reset.css
+++ b/assets/reset.css
@@ -4,10 +4,14 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 100%;
   font-weight: normal;
-	margin: 0;
+  margin: 0;
   padding: 0;
 }
 
 b {
   font-weight: bold;
+}
+
+code {
+  font-family: monospace;
 }
