--- a/docs/reset.css
+++ b/docs/reset.css
@@ -4,6 +4,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 100%;
   font-weight: normal;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -14,4 +15,9 @@ b {
 
 code {
   font-family: monospace;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
