--- a/docs/reset.css
+++ b/docs/reset.css
@@ -1,7 +1,7 @@
 * {
   border: 0;
   box-sizing: border-box;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 100%;
   font-weight: normal;
   list-style-type: none;
@@ -14,7 +14,7 @@ b {
 }
 
 code {
-  font-family: monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
 html, body {
